<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/menu_grp_rental" android:menuCategory="alternative" >
    <item android:id="@+id/find_rent" android:title="@string/find_properties_on_rent" android:icon="@drawable/ic_baseline_apartment_24"/>
    <item android:id="@+id/my_rent" android:title="@string/my_rent" android:icon="@drawable/ic_baseline_home_work_24"/>
</group>
<group android:menuCategory="secondary" android:id="@+id/menu_grp_rentee" android:visible="false">
    <item android:id="@+id/add_property" android:title="@string/add_property" android:icon="@drawable/ic_baseline_add_business_24"/>
    <item android:id="@+id/view_property" android:title="@string/view_my_properties" android:icon="@drawable/ic_baseline_business_24"/>
</group>
<group android:menuCategory="system">
    <item android:id="@+id/account" android:title="@string/view_account" android:icon="@drawable/ic_baseline_account_circle_24"/>
    <item android:id="@+id/logout" android:title="@string/sign_out" android:icon="@drawable/ic_baseline_exit_to_app_24"/>
</group>
</menu>