<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.NoActionBar.RentCafe"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ic_back_registrationActivity"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_logo1" />

    <TextView
        android:id="@+id/txt_property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/gray14"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/email"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/city_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/poppins_regular"
        android:hint="someone@email.com"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/state_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/poppins_regular"
        android:hint="* * * *"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_capsule_gray14"
        android:fontFamily="@font/poppins_bold"
        android:onClick="loginBtnClicked"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_capsule_gray14"
        android:fontFamily="@font/poppins_bold"
        android:onClick="registerBtnClicked"
        android:text="@string/registration_btn"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>